# lipsum-cpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  GenerateParagraph.cpp  GenerateParagraphList.cpp  GenerateSentence.cpp  GenerateWord.cpp  README.md
scripts/: README.md  lipsum.txt  split.py
src/: lipsum.cpp  lipsum.h  lipsum.hpp  lipsum.inl  lipsum_h.cpp
