cmake_minimum_required(VERSION 3.15)
project(lipsum-cpp)
option(LPSM_BUILD_STATIC "Build as static library" OFF)
option(LPSM_BUILD_CWRAPPER "Build C wrapper" OFF)
set(lipsum_srcs "")
if(LPSM_BUILD_STATIC)
    message("Building static")
    list(APPEND lipsum_srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/lipsum.cpp")
endif()
if(LPSM_BUILD_CWRAPPER)
    message("Building C wrapper")
    list(APPEND lipsum_srcs "${CMAKE_CURRENT_SOURCE_DIR}/src/lipsum_h.cpp")
endif()
if(LPSM_BUILD_STATIC)
    add_library(lipsum-cpp STATIC "${lipsum_srcs}")
    target_compile_definitions(lipsum-cpp PUBLIC LIPSUM_BUILD_STATIC)
    target_include_directories(lipsum-cpp PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/src")
else()
    add_library(lipsum-cpp INTERFACE)
    target_include_directories(lipsum-cpp INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/src")
endif()
