cmake_minimum_required(VERSION 3.15)
add_executable(GenerateWord "${CMAKE_CURRENT_SOURCE_DIR}/GenerateWord.cpp")
add_executable(GenerateParagraph "${CMAKE_CURRENT_SOURCE_DIR}/GenerateParagraph.cpp")
add_executable(GenerateParagraphList "${CMAKE_CURRENT_SOURCE_DIR}/GenerateParagraphList.cpp")
add_executable(GenerateSentence "${CMAKE_CURRENT_SOURCE_DIR}/GenerateSentence.cpp")
target_link_libraries(GenerateWord lipsum-cpp)
target_link_libraries(GenerateParagraph lipsum-cpp)
target_link_libraries(GenerateParagraphList lipsum-cpp)
target_link_libraries(GenerateSentence lipsum-cpp)
